--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -15,7 +15,7 @@ jobs:
     - run: |
           curl -L \
             -X POST \
-            -H "Authorization: Bearer ${{ github.token }}"\
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/TesteGAB/actions/workflows/updatedeps.yaml/dispatches \
             -d '{"ref":"main","inputs":{}}'
