--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,4 +18,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/updatedeps.yml/dispatches \
-            -d '{"ref":"main","inputs":{}}'
+            -d '{"ref":"dev","inputs":{}}'
