--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -19,3 +19,4 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
             -d '{"ref":"dev","inputs":{}}'
+          echo "${{ github.sha }}"
