--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -13,4 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-          echo "${{ github.sha }}"
+            curl -L \
+            -X POST \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
+            -d '{"ref":"dev","inputs":{}}' |
