--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,4 +18,10 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
+            -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}'
+          curl -L \
+            -X POST \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
             -d '{"ref":"dev","inputs":{"commit":"${{ github.sha }}"}}'
