--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,6 +18,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
-            -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}' -o workspaces.json
-    - name: print workspace id
-      run: echo ${{ steps.workspace }}
+            -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}'
