--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,6 +18,6 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
-            -d '{"ref":"bump1","inputs":{"commit":"${{ github.sha }}"}}' -o workspaces.json
+            -d '{"ref":"teste123teste","inputs":{"commit":"${{ github.sha }}"}}' -o workspaces.json
     - name: print workspace id
       run: echo ${{ steps.workspace }}
