--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,6 +18,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
-            -d '{"ref":"teste123teste","inputs":{"commit":"${{ github.sha }}"}}' -o workspaces.json
+            -d '{"ref":"teste123teste","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
+            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_ENV
     - name: print workspace id
       run: echo workspaces.json
