--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -19,6 +19,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
             -d '{"ref":"teste123teste","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
-            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_ENV
-    - name: print workspace id
-      run: echo workspaces.json
+            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_MESSAGE
+    - run: echo "$GITHUB_MESSAGE"
