--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -19,5 +19,6 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
             -d '{"ref":"teste123teste","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
-            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_MESSAGE
-    - run: echo "$GITHUB_MESSAGE"
+            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_ENV
+      id: req
+    - run: echo "${{ steps.req.GIT_MESSAGE }}"
