--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -22,3 +22,4 @@ jobs:
             echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_ENV
       id: req
     - run: echo "${{ steps.req.GIT_MESSAGE }}"
+    - run: echo "${{ steps.req.GIT_MESSAGE }}"
