--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -21,6 +21,5 @@ jobs:
             -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
             echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
       id: req
-    - run: echo "${{ steps.req.env }}"
-    - if: ${{ steps.req.GIT_MESSAGE }} == ''
-      run: echo "${{ steps.req.outputs.GIT_MESSAGE }}"
+    - if: ${{ steps.req.outputs.GIT_MESSAGE }}
+      run: echo "ok!"
