--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -18,7 +18,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
-            -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
+            -d '{"ref":"dev","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
             echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
       id: req
     - if: ${{ steps.req.outputs.GIT_MESSAGE }}
