--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -8,7 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -17,9 +16,16 @@ jobs:
             -X POST \
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_dependencies.yml/dispatches \
-            -d '{"ref":"dev","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
+            https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_and_push_jarbas_commons.yml/dispatches \
+            -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
             echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
       id: req
     - if: ${{ steps.req.outputs.GIT_MESSAGE }}
-      run: echo "ok!"
+    - run: |
+          curl -L \
+            -X POST \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}"\
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_and_pr_jarbas_commons.yml.yml/dispatches \
+            -d '{"ref":"dev","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
+            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
