--- a/.github/workflows/notify_commits.yml
+++ b/.github/workflows/notify_commits.yml
@@ -20,6 +20,8 @@ jobs:
             -d '{"ref":"bump/update-jarbas-commons","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
             echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
       id: req
+    - run: |
+          echo "${{ steps.req.outputs.GIT_MESSAGE }}"
     - if: ${{ steps.req.outputs.GIT_MESSAGE }}
       run: |
           curl -L \
@@ -28,4 +30,4 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/BrunoGambim/TesteGAB/actions/workflows/update_and_pr_jarbas_commons.yml/dispatches \
             -d '{"ref":"dev","inputs":{"commit":"${{ github.sha }}"}}' > $HOME/res.json
-            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)" >> $GITHUB_OUTPUT
+            echo "GIT_MESSAGE=$(jq -r '.message' $HOME/res.json)"
